--- a/00-difference-js-jQuer/drag_drop_JQ/index.html
+++ b/00-difference-js-jQuer/drag_drop_JQ/index.html
@@ -6,15 +6,23 @@
   <title>jQuery UI Draggable - Default functionality</title>
   
   <style>
-  #draggable { width: 150px; height: 150px; padding: 0.5em; border: 1px 1px 1px 1px;}
-  
+  .rag { width: 150px; height: 150px; padding: 0.5em; border: 1px 1px 1px 1px;}
+  .drag {
+				background-color: #F0F0F0;
+				border: 1px solid #000000;
+				cursor: move;
+				margin: 0 0 0.5em 1.5em;
+				padding: 0.5em;
+				position: relative;
+			}
   </style>
   
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 </head>
 <body>
- 
+  <div class="drag" style="left: -4px; top: -4px;">Barre 1</div>
+  <div class="drag">Barre 2</div>
 
   <img src="drag_image.png" alt="" class="drag">
   <script text="text/javascript">
